--- a/src/main/resources/Variables.fxml
+++ b/src/main/resources/Variables.fxml
@@ -12,7 +12,10 @@
         <JFXListView fx:id="solvedVariables" prefWidth="450" />
     </right>
     <bottom>
-        <Button fx:id="solve" onAction="#solve" text="Solve" />
+        <FlowPane>
+            <Button fx:id="solve" onAction="#solve" text="Solve" />
+            <Button fx:id="reset" onAction="#reset" text="Reset" />
+        </FlowPane>
     </bottom>
 
 </BorderPane>
