--- a/src/main/resources/Variables.fxml
+++ b/src/main/resources/Variables.fxml
@@ -15,6 +15,8 @@
         <FlowPane>
             <Button fx:id="solve" onAction="#solve" text="Solve" />
             <Button fx:id="reset" onAction="#reset" text="Reset" />
+            <TextField fx:id="newVarName"/>
+            <Button fx:id="add" onAction="#addVariable" text="Add"/>
         </FlowPane>
     </bottom>
 
