--- a/src/main/resources/NPVCalculator.fxml
+++ b/src/main/resources/NPVCalculator.fxml
@@ -8,7 +8,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Uckit.view.WACCalculator"
+            fx:controller="Uckit.view.NPVCalculator"
             prefHeight="400.0" prefWidth="600.0">
 
 
